fixed hero section on mobile screen

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -347,7 +347,10 @@ nav ul a.active {
         display: flex;
         align-items: center;
         flex-direction: column;
-        justify-self: center;
+
+        @include mobile {
+          width: 100%;
+        }
 
         h3 {
           font-size: 3rem;
@@ -371,7 +374,7 @@ nav ul a.active {
             font-size: 14px;
             width: 100%;
             line-height: 1.7;
-            padding-block: 0.5rem;
+            padding-top: 1rem;
           }
         }
 
@@ -388,6 +391,12 @@ nav ul a.active {
           &:hover {
             background-color: $white;
             color: $lightBlue;
+          }
+
+          @include mobile {
+            padding: 15px;
+            font-size: 15px;
+            word-spacing: 0.4rem;
           }
 
           @include tablet {
@@ -419,9 +428,19 @@ nav ul a.active {
         color: var(--black);
         font-size: 1.3rem;
       }
+
+      @include mobile {
+        width: 3rem;
+        height: 3rem;
+        font-size: 2rem;
+      }
     }
     .swiper-button-prev {
       right: 4.1rem;
+
+      @include mobile {
+        right: 3.1rem;
+      }
     }
   }
 
